<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/spider_inductions_2016"
        android:id="@+id/spider"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_below="@+id/spider"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameedit"
        android:hint="@string/enter_name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/roll_number"
        android:id="@+id/number"
        android:layout_below="@+id/nameedit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="8"
        android:id="@+id/roll"
        android:hint="@string/enter_roll_number"
        android:layout_alignBottom="@+id/number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/department"
        android:id="@+id/textView4"
        android:layout_below="@+id/roll"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/departMent"
        android:spinnerMode="dropdown"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/number"
        android:layout_alignStart="@+id/roll"
        android:layout_alignLeft="@+id/roll"
        android:layout_toRightOf="@+id/number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile"
        android:id="@+id/profiles"
        android:layout_below="@+id/departMent"
        android:layout_marginTop="28dp"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_dev"
        android:id="@+id/appdev"
        android:layout_below="@+id/profiles"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_dev"
        android:id="@+id/webdev"
        android:checked="false"
        android:layout_below="@+id/appdev" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algos"
        android:id="@+id/algos"
        android:layout_below="@+id/webdev"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tronix"
        android:id="@+id/tronix"

        android:layout_below="@+id/algos"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor"
        android:id="@+id/mentor"
        android:checked="false"
        android:layout_below="@+id/tronix"
        android:layout_marginTop="24dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitbtn"
        android:layout_below="@+id/mentor"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
